// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcEmployee__Avatar Should render employee avatar with default params 1`] = `
<image
  alt="robot-serptools"
  height={32}
  mix={
    Object {
      "block": "abc-employee",
      "elem": "avatar",
    }
  }
  url="//center.yandex-team.ru/api/v1/user/robot-serptools/avatar/80.jpg"
  width={32}
/>
`;

exports[`AbcEmployee__Avatar Should render large employee avatar 1`] = `
<image
  alt="robot-serptools"
  height={38}
  mix={
    Object {
      "block": "abc-employee",
      "elem": "avatar",
    }
  }
  url="//center.yandex-team.ru/api/v1/user/robot-serptools/avatar/100.jpg"
  width={38}
/>
`;

exports[`AbcEmployee__Avatar Should render medium employee avatar 1`] = `
<image
  alt="robot-serptools"
  height={32}
  mix={
    Object {
      "block": "abc-employee",
      "elem": "avatar",
    }
  }
  url="//center.yandex-team.ru/api/v1/user/robot-serptools/avatar/80.jpg"
  width={32}
/>
`;

exports[`AbcEmployee__Avatar Should render small employee avatar 1`] = `
<image
  alt="robot-serptools"
  height={28}
  mix={
    Object {
      "block": "abc-employee",
      "elem": "avatar",
    }
  }
  url="//center.yandex-team.ru/api/v1/user/robot-serptools/avatar/60.jpg"
  width={28}
/>
`;
